# kinode-book

./: .env  .gitignore  README.md  Untitled.ipynb  book.toml
.github/workflows/: mdbook.yml
code/: tests.toml
code/capabilities/: .gitignore  Cargo.toml  metadata.json
code/chat-with-file-transfer/: Cargo.toml  metadata.json
code/file-transfer/: .gitignore  Cargo.toml  metadata.json
code/file-transfer/file-transfer/: Cargo.toml
code/file-transfer/file-transfer/src/: lib.rs
code/file_transfer/: .gitignore  Cargo.toml  metadata.json
code/http-client/: Cargo.toml  metadata.json
code/http-client/http-client/: Cargo.toml
code/http-client/http-client/src/: lib.rs
code/http-server/: Cargo.toml  metadata.json
code/http_client/: metadata.json
code/http_server/: Cargo.toml
code/mfa-data-demo/: Cargo.toml  metadata.json
code/mfa-fe-demo/: Cargo.toml  metadata.json
code/mfa-message-demo/: Cargo.toml  metadata.json
code/mfa_data_demo/: Cargo.toml  metadata.json
code/mfa_message_demo/: metadata.json
code/save-state/: Cargo.toml  metadata.json
code/save_state/: Cargo.toml  metadata.json
code/spawn/: metadata.json
code/ws-client/: Cargo.toml  metadata.json
code/ws-server/: Cargo.toml  metadata.json  ws-client.py
code/ws-server-with-reply/: Cargo.toml  metadata.json  requirements.sh  ws-client.py
code/ws_client/: Cargo.toml  requirements.sh
code/ws_client/ws_client/: Cargo.toml
code/ws_client/ws_client/src/: lib.rs
code/ws_server/: Cargo.toml  metadata.json  requirements.sh
src/: SUMMARY.md  api_reference.md  audits-and-security.md  build-and-deploy-an-app.md  chess_app.md  databases.md  design_philosophy.md  eth.md  files.md  filesystem.md  frontends.md  getting-started.md  glossary.md  hosted-nodes.md  http_client.md  http_server.md  http_server_and_client.md  identity_system.md  install.md  intro.md  kit-dev-toolkit.md  login.md  networking_protocol.md  pki.md  process-capabilities.md  process-responses.md  process-startup.md  processes-overview.md  processes.md  quick-start.md  read_and_write_to_chain.md  terminal.md
theme/: book.js  customize-buttons.js  index.hbs
(+460 files in other folders)
