[package]
name = "file-transfer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
kinode_process_lib = { version = "0.10.1", features = ["logging"] }
process_macros = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
