[package]
name = "http-client"
version = "0.1.0"
edition = "2021"

[dependencies]
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "0666d2c" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
wit-bindgen = "0.36.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
